package ChessGame;

public class Knight extends Piece {
    public Knight(Player var1) {
        super(var1, "X");
    }

    public boolean isValidMove(Tile var1, Board var2) {
        return true;
    }

    @Override
    public void Tile(Tile tile) {

    }
}
