package ChessGame;

import java.awt.Color;

public class Player {
    public final Color colour;

    public Player(Color var1) {
        this.colour = var1;
    }
}
