package ChessGame;

public class Rook extends Piece {
    public Rook(Player var1) {
        super(var1, "R");
    }

    public boolean isValidMove(Tile var1, Board var2) {
        boolean var3 = true;
        return var3;
    }

    @Override
    public void Tile(Tile tile) {

    }
}
